# PaudhaMitra

./: .gitattributes  .replit  main.py  pnpm-lock.yaml  pyproject.toml  replit.md
artifacts/api-server/src/routes/: health.ts  index.ts  ml-proxy.ts  weather.ts
artifacts/paudhamitra/: index.html  package.json
artifacts/paudhamitra-backend/: app.py  config.json  metadata.json  paudhamitra_model.keras
artifacts/paudhamitra/.replit-artifact/: artifact.toml
artifacts/paudhamitra/src/: App.tsx  index.css
artifacts/paudhamitra/src/components/: Footer.tsx  Navbar.tsx
artifacts/paudhamitra/src/pages/: About.tsx  DiseaseDetection.tsx  Home.tsx  PlantGuide.tsx  WateringSuggestion.tsx
